documentation for steps 2a and 2b

--- a/notebooks/Data_Products_step_3_insights.ipynb
+++ b/notebooks/Data_Products_step_3_insights.ipynb
@@ -96,7 +96,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "asin_list = pd.read_csv('asin_list.csv')['asin'].tolist()\n",
+    "asin_list_path = './data/external/asin_list.csv'\n",
+    "asin_list = pd.read_csv(asin_list_path)['asin'].tolist()\n",
     "query = text(\"SELECT * FROM products WHERE asin IN :asin_list\")\n",
     "product = pd.read_sql_query(query, engine, params={\"asin_list\": tuple(asin_list)})\n",
     "product['product_description_data'] = product['product_description_data'].apply(lambda x: eval(x))"
