--- a/notebooks/Data_reviews_step_1_AmazonScrapperFinal.ipynb
+++ b/notebooks/Data_reviews_step_1_AmazonScrapperFinal.ipynb
@@ -444,7 +444,9 @@
     }
    ],
    "source": [
-    "asin_list = ['B07XCRVK2Y', 'B07X7YFZWG', 'B07XCRT49W', 'B07Q899BPB', 'B07QXMLSS5', 'B01M4OV4Q4', 'B085Q4W3WX', 'B09R9MMW6J', 'B07ZJ8HRN8', 'B085Q3TLF8', 'B07ZJ8FDPK', 'B09VBZZ9C8']\n",
+    "asin_list_path = './data/external/asin_list.csv'\n",
+    "asin_list = pd.read_csv(asin_list_path)['asin'].tolist()\n",
+    "\n",
     "output_folder = search_folder\n",
     "\n",
     "# Check if the folder exists, create it if it doesn't\n",
