small logic changes

--- a/notebooks/Data_reviews_step_7_solution_processing.ipynb
+++ b/notebooks/Data_reviews_step_7_solution_processing.ipynb
@@ -70,6 +70,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cluster results\n",
+    "run_clustering_script(database = 'postgresql://postgres:mysecretpassword@localhost/postgres')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 85,
    "metadata": {},
    "outputs": [
