--- a/notebooks/Data_Reviews_step_2a_sentiment_extraction.ipynb
+++ b/notebooks/Data_Reviews_step_2a_sentiment_extraction.ipynb
@@ -5,13 +5,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ARCHITECTURE\n",
-    "\n",
-    "- Scrape Reviews\n",
-    "- Create reviews lists, parse by ASIN\n",
-    "- Create batches per ASIN\n",
-    "- Process with GPT\n",
-    "- Create a report showing findings in a dashboard\n"
+    "## STRUCTURE\n",
+    "- Read Scraped Reviews & Products\n",
+    "    - Create the asin list\n",
+    "    - Create reviews lists, parse by ASIN\n",
+    "    - Create products lists, parse by ASIN\n",
+    "- Run sentiment analysis on reviews\n",
+    "- Save results\n",
+    "\n"
    ]
   },
   {
@@ -29,37 +30,17 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import re\n",
-    "import requests\n",
-    "import json\n",
-    "import csv\n",
-    "import openai\n",
     "\n",
-    "import tiktoken\n",
-    "from typing import Dict\n",
-    "\n",
-    "from rich.console import Console\n",
-    "from rich.table import Table\n",
-    "console = Console()\n",
-    "from datetime import datetime, timedelta\n",
     "from dotenv import load_dotenv\n",
     "import os\n",
     "\n",
     "load_dotenv()\n",
-    "OPENAI_API_KEY = os.getenv('OPENAI_API_KEY')\n",
-    "SERPAPI_API_KEY = os.getenv('SERPAPI_API_KEY')\n",
-    "WOLFRAM_ALPHA_APPID = os.getenv('WOLFRAM_ALPHA_APPID')\n",
-    "PROMPTLAYER_API_KEY = os.getenv('PROMPTLAYER_API_KEY')\n",
     "HUGGINGFACEHUB_API_TOKEN = os.getenv('HUGGINGFACEHUB_API_TOKEN')\n",
     "\n",
-    "if os.getenv(\"OPENAI_API_KEY\") is not None:\n",
-    "    print (\"OPENAI_API_KEY is ready\")\n",
+    "if os.getenv(\"HUGGINGFACEHUB_API_TOKEN\") is not None:\n",
+    "    print (\"HUGGINGFACEHUB_API_TOKEN is ready\")\n",
     "else:\n",
-    "    print (\"OPENAI_API_KEY environment variable not found\")\n",
-    "\n",
-    "# from getpass import getpass\n",
-    "# HUGGINGFACEHUB_API_TOKEN = getpass()"
+    "    print (\"HUGGINGFACEHUB_API_TOKEN environment variable not found\")"
    ]
   },
   {
