separat reviews de products

--- a/notebooks/Data_Products_step_2_extraction.ipynb
+++ b/notebooks/Data_Products_step_2_extraction.ipynb
@@ -56,12 +56,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "product = pd.read_csv(\"products.csv\")\n",
-    "#asin = pd.read_csv(\"asins.csv\")"
+    "def read_data(folder_path):\n",
+    "    reviews = pd.DataFrame()\n",
+    "    products = pd.DataFrame()\n",
+    "    asins = pd.DataFrame()\n",
+    "    \n",
+    "    for file_name in os.listdir(folder_path):\n",
+    "        if file_name.startswith(\"asin\"):\n",
+    "            file_path = os.path.join(folder_path, file_name)\n",
+    "            df = pd.read_csv(file_path)\n",
+    "            products = pd.concat([products, df])\n",
+    "        elif file_name.startswith(\"products\"):\n",
+    "            file_path = os.path.join(folder_path, file_name)\n",
+    "            df = pd.read_csv(file_path)\n",
+    "            asins = pd.concat([asins, df])\n",
+    "    \n",
+    "    return products, asins\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "products, asins = read_data(\"/Users/vladbordei/Documents/Development/OaieAmazoniana/data/MagneticBeadsBoardFreestyle\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "products.to_csv(\"products.csv\", index=False)\n",
+    "asins.to_csv(\"asins.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "asin_list_path = './data/external/asin_list.csv'\n",
+    "asin_list = pd.read_csv(asin_list_path)['asin'].tolist()"
    ]
   },
   {
