--- a/notebooks/Data_Reviews_step_2a_sentiment_extraction.ipynb
+++ b/notebooks/Data_Reviews_step_2a_sentiment_extraction.ipynb
@@ -70,16 +70,8 @@
     "            file_path = os.path.join(folder_path, file_name)\n",
     "            df = pd.read_csv(file_path)\n",
     "            reviews = pd.concat([reviews, df])\n",
-    "        elif file_name.startswith(\"asin\"):\n",
-    "            file_path = os.path.join(folder_path, file_name)\n",
-    "            df = pd.read_csv(file_path)\n",
-    "            products = pd.concat([products, df])\n",
-    "        elif file_name.startswith(\"products\"):\n",
-    "            file_path = os.path.join(folder_path, file_name)\n",
-    "            df = pd.read_csv(file_path)\n",
-    "            asins = pd.concat([asins, df])\n",
     "    \n",
-    "    return reviews, products, asins\n"
+    "    return reviews\n"
    ]
   },
   {
@@ -211,7 +203,7 @@
     }
    ],
    "source": [
-    "reviews, products, asins = read_data(\"/Users/vladbordei/Documents/Development/OaieAmazoniana/data/MagneticBeadsBoardFreestyle\")\n",
+    "reviews = read_data(\"/Users/vladbordei/Documents/Development/OaieAmazoniana/data/MagneticBeadsBoardFreestyle\")\n",
     "# Apply the sentiment analysis to the \"review\" column\n",
     "reviews[[\"positive_sentiment\", \"negative_sentiment\"]] = reviews.apply(process_review, axis=1)"
    ]
@@ -222,8 +214,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "products.to_csv(\"products.csv\", index=False)\n",
-    "asins.to_csv(\"asins.csv\", index=False)\n",
     "reviews.to_csv('reviews_with_sentiment.csv', index=False)"
    ]
   }
