corectat mici scapari

--- a/notebooks/Data_Reviews_step_4_df_saving.ipynb
+++ b/notebooks/Data_Reviews_step_4_df_saving.ipynb
@@ -26,9 +26,7 @@
     "from Data_Reviews_step_3_insights import get_weighted_results_heatmap\n",
     "from Data_Reviews_step_3_insights import get_weighted_results_graph\n",
     "from Data_Reviews_step_3_insights import process_data_short\n",
-    "from Data_Reviews_step_3_insights import process_list\n",
-    "\n",
-    "from Data_reviews_traits_clustering_step_6 import run_clustering_script\n"
+    "from Data_Reviews_step_3_insights import process_list"
    ]
   },
   {
