--- a/notebooks/Data_reviews_step_7_solution_processing.ipynb
+++ b/notebooks/Data_reviews_step_7_solution_processing.ipynb
@@ -75,6 +75,7 @@
    "outputs": [],
    "source": [
     "# Cluster results\n",
+    "from Data_reviews_traits_clustering_step_6 import run_clustering_script\n",
     "run_clustering_script(database = 'postgresql://postgres:mysecretpassword@localhost/postgres')"
    ]
   },
