Interim save. Not ready yet

--- a/notebooks/Data_Reviews_step_2b_data_extraction.ipynb
+++ b/notebooks/Data_Reviews_step_2b_data_extraction.ipynb
@@ -76,8 +76,7 @@
    "outputs": [],
    "source": [
     "asin_list_path = './data/external/asin_list.csv'\n",
-    "asin_list = pd.read_csv(asin_list_path)['asin'].tolist()\n",
-    "# ASINS = asin_list"
+    "asin_list = pd.read_csv(asin_list_path)['asin'].tolist()"
    ]
   },
   {
