--- a/notebooks/Data_reviews_step_7_solution_processing.ipynb
+++ b/notebooks/Data_reviews_step_7_solution_processing.ipynb
@@ -65,7 +65,8 @@
     "engine = create_engine('postgresql://postgres:mysecretpassword@localhost/postgres')\n",
     "\n",
     "# Read the ASIN values from the CSV file\n",
-    "asin_list = pd.read_csv('asin_list.csv')['asin'].tolist()"
+    "asin_list_path = './data/external/asin_list.csv'\n",
+    "asin_list = pd.read_csv(asin_list_path)['asin'].tolist()"
    ]
   },
   {
