Introdus solutiile structurate in dash

--- a/notebooks/Data_reviews_step_8_solution_clustering.ipynb
+++ b/notebooks/Data_reviews_step_8_solution_clustering.ipynb
@@ -2460,6 +2460,334 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cluster_label</th>\n",
+       "      <th>type</th>\n",
+       "      <th>cluster_problem_statement</th>\n",
+       "      <th>cluster_solution_title</th>\n",
+       "      <th>cluster</th>\n",
+       "      <th>improvement_title</th>\n",
+       "      <th>improvement_objective</th>\n",
+       "      <th>improvement_solution</th>\n",
+       "      <th>improvement_steps</th>\n",
+       "      <th>improvement_considerations</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Noisy Operation</td>\n",
+       "      <td>Issue</td>\n",
+       "      <td>The product, a car toy for kids, has been repo...</td>\n",
+       "      <td>Implementing Noise Reduction Technology</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Noise Reduction and Sound Dampening</td>\n",
+       "      <td>Reduce the noise level of the product to enhan...</td>\n",
+       "      <td>Add a volume control feature to allow users to...</td>\n",
+       "      <td>Volume Control: Add a control knob on the side...</td>\n",
+       "      <td>Conduct a feasibility analysis for cost-effect...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Magnetic Drawing Tools and Toys</td>\n",
+       "      <td>Fact</td>\n",
+       "      <td>The product, a magnetic drawing board set, has...</td>\n",
+       "      <td>Improving the Magnet Design for Better Stability</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Noise Reduction and Sound Dampening</td>\n",
+       "      <td>Reduce the noise level of the product to enhan...</td>\n",
+       "      <td>Add a volume control feature to allow users to...</td>\n",
+       "      <td>Volume Control: Add a control knob on the side...</td>\n",
+       "      <td>Conduct a feasibility analysis for cost-effect...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Board Game Malfunctions</td>\n",
+       "      <td>Issue</td>\n",
+       "      <td>The product, a magnetic drawing board set, has...</td>\n",
+       "      <td>Improving the Quality and Durability of the Balls</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Noise Reduction and Sound Dampening</td>\n",
+       "      <td>Reduce the noise level of the product to enhan...</td>\n",
+       "      <td>Add a volume control feature to allow users to...</td>\n",
+       "      <td>Volume Control: Add a control knob on the side...</td>\n",
+       "      <td>Conduct a feasibility analysis for cost-effect...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Sensory Features and Technical Specifications</td>\n",
+       "      <td>Fact</td>\n",
+       "      <td>The product, a magnetic drawing board set, has...</td>\n",
+       "      <td>Reducing the Noise Level of the Product</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Noise Reduction and Sound Dampening</td>\n",
+       "      <td>Reduce the noise level of the product to enhan...</td>\n",
+       "      <td>Add a volume control feature to allow users to...</td>\n",
+       "      <td>Volume Control: Add a control knob on the side...</td>\n",
+       "      <td>Conduct a feasibility analysis for cost-effect...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Beads and Pen Functionality</td>\n",
+       "      <td>Fact</td>\n",
+       "      <td>The product has received mixed reviews, with s...</td>\n",
+       "      <td>Reducing the Clicking Sound Produced by the Be...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Noise Reduction and Sound Dampening</td>\n",
+       "      <td>Reduce the noise level of the product to enhan...</td>\n",
+       "      <td>Add a volume control feature to allow users to...</td>\n",
+       "      <td>Volume Control: Add a control knob on the side...</td>\n",
+       "      <td>Conduct a feasibility analysis for cost-effect...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119</th>\n",
+       "      <td>Pen Attachment and Loss</td>\n",
+       "      <td>Issue</td>\n",
+       "      <td>The product has received negative reviews rela...</td>\n",
+       "      <td>Redesigning the Stylus Pen with Improved Attac...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Redesign of Bead and Hole Pattern</td>\n",
+       "      <td>To address the issue of beads getting stuck an...</td>\n",
+       "      <td>Redesign the bead and hole pattern to ensure t...</td>\n",
+       "      <td>Conduct a thorough analysis of the current des...</td>\n",
+       "      <td>Ensure that the modifications align with the t...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>166</th>\n",
+       "      <td>Sensory Features and Technical Specifications</td>\n",
+       "      <td>Fact</td>\n",
+       "      <td>The product, a magnetic drawing board set, has...</td>\n",
+       "      <td>Reducing the Noise Level of the Product</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Introduction of Larger Size Options</td>\n",
+       "      <td>To address customer dissatisfaction with the p...</td>\n",
+       "      <td>Expand the product line to include larger size...</td>\n",
+       "      <td>Conduct a market analysis to determine the dem...</td>\n",
+       "      <td>Ensure that the larger size options align with...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>167</th>\n",
+       "      <td>Product Improvements and Features</td>\n",
+       "      <td>Improvement</td>\n",
+       "      <td>The product has received mixed reviews, with s...</td>\n",
+       "      <td>Expanding the Product Line to Include Larger S...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Introduction of Larger Size Options</td>\n",
+       "      <td>To address customer dissatisfaction with the p...</td>\n",
+       "      <td>Expand the product line to include larger size...</td>\n",
+       "      <td>Conduct a market analysis to determine the dem...</td>\n",
+       "      <td>Ensure that the larger size options align with...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>169</th>\n",
+       "      <td>Fine Motor Skills Bead Maze</td>\n",
+       "      <td>Issue</td>\n",
+       "      <td>The product, a magnetic drawing board set, has...</td>\n",
+       "      <td>Improving the Bead Design and Hole Pattern</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Introduction of Larger Size Options</td>\n",
+       "      <td>To address customer dissatisfaction with the p...</td>\n",
+       "      <td>Expand the product line to include larger size...</td>\n",
+       "      <td>Conduct a market analysis to determine the dem...</td>\n",
+       "      <td>Ensure that the larger size options align with...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>171</th>\n",
+       "      <td>Pen Attachment and Loss</td>\n",
+       "      <td>Issue</td>\n",
+       "      <td>The product has received negative reviews rela...</td>\n",
+       "      <td>Redesigning the Stylus Pen with Improved Attac...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Introduction of Larger Size Options</td>\n",
+       "      <td>To address customer dissatisfaction with the p...</td>\n",
+       "      <td>Expand the product line to include larger size...</td>\n",
+       "      <td>Conduct a market analysis to determine the dem...</td>\n",
+       "      <td>Ensure that the larger size options align with...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>90 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                     cluster_label         type  \\\n",
+       "0                                  Noisy Operation        Issue   \n",
+       "2                  Magnetic Drawing Tools and Toys         Fact   \n",
+       "3                          Board Game Malfunctions        Issue   \n",
+       "4    Sensory Features and Technical Specifications         Fact   \n",
+       "5                      Beads and Pen Functionality         Fact   \n",
+       "..                                             ...          ...   \n",
+       "119                        Pen Attachment and Loss        Issue   \n",
+       "166  Sensory Features and Technical Specifications         Fact   \n",
+       "167              Product Improvements and Features  Improvement   \n",
+       "169                    Fine Motor Skills Bead Maze        Issue   \n",
+       "171                        Pen Attachment and Loss        Issue   \n",
+       "\n",
+       "                             cluster_problem_statement  \\\n",
+       "0    The product, a car toy for kids, has been repo...   \n",
+       "2    The product, a magnetic drawing board set, has...   \n",
+       "3    The product, a magnetic drawing board set, has...   \n",
+       "4    The product, a magnetic drawing board set, has...   \n",
+       "5    The product has received mixed reviews, with s...   \n",
+       "..                                                 ...   \n",
+       "119  The product has received negative reviews rela...   \n",
+       "166  The product, a magnetic drawing board set, has...   \n",
+       "167  The product has received mixed reviews, with s...   \n",
+       "169  The product, a magnetic drawing board set, has...   \n",
+       "171  The product has received negative reviews rela...   \n",
+       "\n",
+       "                                cluster_solution_title  cluster  \\\n",
+       "0              Implementing Noise Reduction Technology        0   \n",
+       "2     Improving the Magnet Design for Better Stability        0   \n",
+       "3    Improving the Quality and Durability of the Balls        0   \n",
+       "4              Reducing the Noise Level of the Product        0   \n",
+       "5    Reducing the Clicking Sound Produced by the Be...        0   \n",
+       "..                                                 ...      ...   \n",
+       "119  Redesigning the Stylus Pen with Improved Attac...        1   \n",
+       "166            Reducing the Noise Level of the Product        1   \n",
+       "167  Expanding the Product Line to Include Larger S...        1   \n",
+       "169         Improving the Bead Design and Hole Pattern        1   \n",
+       "171  Redesigning the Stylus Pen with Improved Attac...        1   \n",
+       "\n",
+       "                       improvement_title  \\\n",
+       "0    Noise Reduction and Sound Dampening   \n",
+       "2    Noise Reduction and Sound Dampening   \n",
+       "3    Noise Reduction and Sound Dampening   \n",
+       "4    Noise Reduction and Sound Dampening   \n",
+       "5    Noise Reduction and Sound Dampening   \n",
+       "..                                   ...   \n",
+       "119    Redesign of Bead and Hole Pattern   \n",
+       "166  Introduction of Larger Size Options   \n",
+       "167  Introduction of Larger Size Options   \n",
+       "169  Introduction of Larger Size Options   \n",
+       "171  Introduction of Larger Size Options   \n",
+       "\n",
+       "                                 improvement_objective  \\\n",
+       "0    Reduce the noise level of the product to enhan...   \n",
+       "2    Reduce the noise level of the product to enhan...   \n",
+       "3    Reduce the noise level of the product to enhan...   \n",
+       "4    Reduce the noise level of the product to enhan...   \n",
+       "5    Reduce the noise level of the product to enhan...   \n",
+       "..                                                 ...   \n",
+       "119  To address the issue of beads getting stuck an...   \n",
+       "166  To address customer dissatisfaction with the p...   \n",
+       "167  To address customer dissatisfaction with the p...   \n",
+       "169  To address customer dissatisfaction with the p...   \n",
+       "171  To address customer dissatisfaction with the p...   \n",
+       "\n",
+       "                                  improvement_solution  \\\n",
+       "0    Add a volume control feature to allow users to...   \n",
+       "2    Add a volume control feature to allow users to...   \n",
+       "3    Add a volume control feature to allow users to...   \n",
+       "4    Add a volume control feature to allow users to...   \n",
+       "5    Add a volume control feature to allow users to...   \n",
+       "..                                                 ...   \n",
+       "119  Redesign the bead and hole pattern to ensure t...   \n",
+       "166  Expand the product line to include larger size...   \n",
+       "167  Expand the product line to include larger size...   \n",
+       "169  Expand the product line to include larger size...   \n",
+       "171  Expand the product line to include larger size...   \n",
+       "\n",
+       "                                     improvement_steps  \\\n",
+       "0    Volume Control: Add a control knob on the side...   \n",
+       "2    Volume Control: Add a control knob on the side...   \n",
+       "3    Volume Control: Add a control knob on the side...   \n",
+       "4    Volume Control: Add a control knob on the side...   \n",
+       "5    Volume Control: Add a control knob on the side...   \n",
+       "..                                                 ...   \n",
+       "119  Conduct a thorough analysis of the current des...   \n",
+       "166  Conduct a market analysis to determine the dem...   \n",
+       "167  Conduct a market analysis to determine the dem...   \n",
+       "169  Conduct a market analysis to determine the dem...   \n",
+       "171  Conduct a market analysis to determine the dem...   \n",
+       "\n",
+       "                            improvement_considerations  \n",
+       "0    Conduct a feasibility analysis for cost-effect...  \n",
+       "2    Conduct a feasibility analysis for cost-effect...  \n",
+       "3    Conduct a feasibility analysis for cost-effect...  \n",
+       "4    Conduct a feasibility analysis for cost-effect...  \n",
+       "5    Conduct a feasibility analysis for cost-effect...  \n",
+       "..                                                 ...  \n",
+       "119  Ensure that the modifications align with the t...  \n",
+       "166  Ensure that the larger size options align with...  \n",
+       "167  Ensure that the larger size options align with...  \n",
+       "169  Ensure that the larger size options align with...  \n",
+       "171  Ensure that the larger size options align with...  \n",
+       "\n",
+       "[90 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "improvements_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['cluster_label', 'type', 'cluster_problem_statement',\n",
+       "       'cluster_solution_title', 'cluster', 'improvement_title',\n",
+       "       'improvement_objective', 'improvement_solution', 'improvement_steps',\n",
+       "       'improvement_considerations'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "improvements_df.columns"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
