new data step 1

--- a/notebooks/Data_Products_step_2_extraction.ipynb
+++ b/notebooks/Data_Products_step_2_extraction.ipynb
@@ -23,9 +23,6 @@
     "\n",
     "load_dotenv()\n",
     "OPENAI_API_KEY = os.getenv('OPENAI_API_KEY')\n",
-    "SERPAPI_API_KEY = os.getenv('SERPAPI_API_KEY')\n",
-    "WOLFRAM_ALPHA_APPID = os.getenv('WOLFRAM_ALPHA_APPID')\n",
-    "PROMPTLAYER_API_KEY = os.getenv('PROMPTLAYER_API_KEY')\n",
     "HUGGINGFACEHUB_API_TOKEN = os.getenv('HUGGINGFACEHUB_API_TOKEN')\n",
     "\n",
     "if os.getenv(\"OPENAI_API_KEY\") is not None:\n",
@@ -36,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,65 +53,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "def read_data(folder_path):\n",
-    "    reviews = pd.DataFrame()\n",
-    "    products = pd.DataFrame()\n",
-    "    asins = pd.DataFrame()\n",
+    "    product = pd.DataFrame()\n",
     "    \n",
     "    for file_name in os.listdir(folder_path):\n",
     "        if file_name.startswith(\"asin\"):\n",
     "            file_path = os.path.join(folder_path, file_name)\n",
     "            df = pd.read_csv(file_path)\n",
-    "            products = pd.concat([products, df])\n",
-    "        elif file_name.startswith(\"products\"):\n",
-    "            file_path = os.path.join(folder_path, file_name)\n",
-    "            df = pd.read_csv(file_path)\n",
-    "            asins = pd.concat([asins, df])\n",
+    "            product = pd.concat([product, df])\n",
     "    \n",
-    "    return products, asins\n"
+    "    return product"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "products, asins = read_data(\"/Users/vladbordei/Documents/Development/OaieAmazoniana/data/MagneticBeadsBoardFreestyle\")"
+    "products = read_data(\"/Users/vladbordei/Documents/Development/ProductExplorer/data/raw/RaisedGardenBed\")\n",
+    "products['product_information.brand'] = products['product_information.brand'].apply(extract_brand_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "products.to_csv(\"products.csv\", index=False)\n",
-    "asins.to_csv(\"asins.csv\", index=False)"
+    "product_path = \"/Users/vladbordei/Documents/Development/ProductExplorer/data/interim/products.csv\"\n",
+    "# products_path = \"./data/interim/products.csv\"\n",
+    "products.to_csv(products_path, index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "asin_list_path = './data/external/asin_list.csv'\n",
+    "# asin_list_path = './data/external/asin_list.csv'\n",
+    "asin_list_path = '/Users/vladbordei/Documents/Development/ProductExplorer/data/external/asin_list.csv'\n",
     "asin_list = pd.read_csv(asin_list_path)['asin'].tolist()"
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://github.com/openai/openai-cookbook/blob/main/examples/How_to_call_functions_with_chat_models.ipynb"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "product['product_information.brand'] = product['product_information.brand'].apply(extract_brand_name)"
+    "import json\n",
+    "import openai\n",
+    "import requests\n",
+    "from tenacity import retry, wait_random_exponential, stop_after_attempt\n",
+    "from termcolor import colored\n",
+    "\n",
+    "GPT_MODEL = \"gpt-3.5-turbo-0613\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@retry(wait=wait_random_exponential(min=1, max=40), stop=stop_after_attempt(3))\n",
+    "def chat_completion_request(messages, functions=None, function_call=None, model=GPT_MODEL):\n",
+    "    headers = {\n",
+    "        \"Content-Type\": \"application/json\",\n",
+    "        \"Authorization\": \"Bearer \" + openai.api_key,\n",
+    "    }\n",
+    "    json_data = {\"model\": model, \"messages\": messages}\n",
+    "    if functions is not None:\n",
+    "        json_data.update({\"functions\": functions})\n",
+    "    if function_call is not None:\n",
+    "        json_data.update({\"function_call\": function_call})\n",
+    "    try:\n",
+    "        response = requests.post(\n",
+    "            \"https://api.openai.com/v1/chat/completions\",\n",
+    "            headers=headers,\n",
+    "            json=json_data,\n",
+    "        )\n",
+    "        return response\n",
+    "    except Exception as e:\n",
+    "        print(\"Unable to generate ChatCompletion response\")\n",
+    "        print(f\"Exception: {e}\")\n",
+    "        return e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pretty_print_conversation(messages):\n",
+    "    role_to_color = {\n",
+    "        \"system\": \"red\",\n",
+    "        \"user\": \"green\",\n",
+    "        \"assistant\": \"blue\",\n",
+    "        \"function\": \"magenta\",\n",
+    "    }\n",
+    "    formatted_messages = []\n",
+    "    for message in messages:\n",
+    "        if message[\"role\"] == \"system\":\n",
+    "            formatted_messages.append(f\"system: {message['content']}\\n\")\n",
+    "        elif message[\"role\"] == \"user\":\n",
+    "            formatted_messages.append(f\"user: {message['content']}\\n\")\n",
+    "        elif message[\"role\"] == \"assistant\" and message.get(\"function_call\"):\n",
+    "            formatted_messages.append(f\"assistant: {message['function_call']}\\n\")\n",
+    "        elif message[\"role\"] == \"assistant\" and not message.get(\"function_call\"):\n",
+    "            formatted_messages.append(f\"assistant: {message['content']}\\n\")\n",
+    "        elif message[\"role\"] == \"function\":\n",
+    "            formatted_messages.append(f\"function ({message['name']}): {message['content']}\\n\")\n",
+    "    for formatted_message in formatted_messages:\n",
+    "        print(\n",
+    "            colored(\n",
+    "                formatted_message,\n",
+    "                role_to_color[messages[formatted_messages.index(formatted_message)][\"role\"]],\n",
+    "            )\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
